--- a/style.css
+++ b/style.css
@@ -46,22 +46,23 @@ table {
     display: none;
 }
 
-.enemy {
-    width: 50px;
-    height: 100px;
+/* .enemy {
+     width: 50px;
+    height: 100px; 
     background: transparent url('./image/enemy.png') center / cover no-repeat;
-    position: absolute;
+     position: absolute;
     left: 125px;
-    bottom: 10px;
-}
+    bottom: 10px; 
+} */
 
-.car {
+.car, .enemy {
     width: 50px;
     height: 100px;
     background: transparent url('./image/player.png') center / cover no-repeat;
     position: absolute;
-    left: 125px;
-    bottom: 10px;
+    /* left: 125px;
+    /* bottom: 10px; */ 
+    /* передаем эти значения в startGame */
 }
 
 .gameArea {
@@ -79,4 +80,36 @@ table {
     height: 50px;
     background: rgb(255, 255, 255);
     left: 145px;
+}
+
+.start {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    margin: 0;
+    padding: 2rem 0;
+    z-index: 200;
+    color: white;
+    font-size: 1.5rem;
+    text-align: center;
+    background: black;
+    cursor: pointer;
+    font-family: sans-serif;
+    font-weight: 700;
+}
+
+.score {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    background: black;
+    padding: 2rem 0;
+    z-index: 200;
+    font-size: 1.5rem;
+    color: blanchedalmond;
+    text-align: center;
+    font-family: sans-serif;
+    font-weight: 500;
 }
