--- a/style.css
+++ b/style.css
@@ -60,7 +60,7 @@ table {
     height: 100px;
     background: transparent url('./image/player.png') center / cover no-repeat;
     position: absolute;
-    /* left: 125px;
+     /* left: 125px; */
     /* bottom: 10px; */ 
     /* передаем эти значения в startGame */
 }
@@ -69,7 +69,7 @@ table {
     width: 300px;
     height: 100%;
     position: relative;
-    margin: auto;
+    margin: 0 auto;
     background: #222;
     overflow: hidden;
 }
